src/objects/Charket__SkillContext__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__CharketContext__c</fullName>
        <label>Charket Context</label>
        <referenceTo>Charket__CharketContext__c</referenceTo>
        <relationshipLabel>Skill Contexts</relationshipLabel>
        <relationshipName>SkillContexts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__IsValid__c</fullName>
        <formula>AND((NOW() -  Charket__LastRunTime__c) * 24 * 60 &lt; Charket__Skill__r.Charket__ValidFor__c,  TEXT(Charket__Status__c ) = &apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__LastRunTime__c</fullName>
        <label>Last Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__Skill__c</fullName>
        <label>Charket Skill</label>
        <referenceTo>Charket__Skill__c</referenceTo>
        <relationshipLabel>Skill Contexts</relationshipLabel>
        <relationshipName>SkillContexts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Skill Context</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Contexts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>